[package]
name = "ast-toolkit2"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository.workspace = true
license.workspace = true
description = "A (second) collection of libraries and macros for working with ASTs and compilers in Rust."


[[test]]
name = "derive_located"
path = "./tests/derive_located.rs"
required-features = ["loc", "macros"]

[[test]]
name = "derive_tree"
path = "./tests/derive_tree.rs"
required-features = ["loc", "macros", "tree"]


[dependencies]
serde = { version = "1.0.0", features = ["derive"], optional = true }
thiserror = { version = "2.0.0", optional = true }

ast-toolkit2-macros = { path = "./macros", optional = true }


[features]
default = ["loc", "tree"]

# Aliases
parse = ["nibble"]

# Functionality
init = []
loc = ["ast-toolkit2-macros/loc"]
nibble = ["loc", "dep:thiserror"]
tree = ["loc", "ast-toolkit2-macros/tree"]

# Third-party
macros = ["dep:ast-toolkit2-macros"]
serde = ["dep:serde"]


[workspace]
resolver = "3"
members = ["./ast-toolkit2-build", "./macros"]


[workspace.package]
repository = "https://github.com/Lut99/ast-toolkit2-rs"
license = "Apache-2.0"
