[package]
name = "ast-toolkit2"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository.workspace = true
license.workspace = true
description = "A (second) collection of libraries and macros for working with ASTs and compilers in Rust."


[[test]]
name = "derive_located"
path = "./tests/derive_located.rs"
required-features = ["loc", "proc-macros"]

[[test]]
name = "derive_tag"
path = "./tests/derive_tag.rs"
required-features = ["loc", "proc-macros", "tree"]

[[test]]
name = "derive_tree"
path = "./tests/derive_tree.rs"
required-features = ["loc", "proc-macros", "tree"]


[dependencies]
console = { version = "0.16.0", default-features = false, features = ["std"], optional = true }
serde = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
thiserror = { version = "2.0.0", default-features = false, optional = true }

ast-toolkit2-decl-macros = { path = "./decl-macros", optional = true }
ast-toolkit2-proc-macros = { path = "./proc-macros", optional = true }


[dev-dependencies]
serde_json = "1.0.0"


[features]
default = ["loc", "tree"]

# Aliases
parse = ["nibble"]

# Functionality
init = []
loc = ["ast-toolkit2-proc-macros/loc"]
nibble = ["loc", "dep:thiserror"]
print = []
punct = ["ast-toolkit2-decl-macros/punct"]
tree = ["loc", "ast-toolkit2-proc-macros/tree"]

# Third-party
color = ["dep:console"]
macros = ["decl-macros", "proc-macros"]
decl-macros = ["dep:ast-toolkit2-decl-macros"]
proc-macros = ["dep:ast-toolkit2-proc-macros"]
serde = ["dep:serde"]


[workspace]
resolver = "3"
members = ["./decl-macros", "./proc-macros"]


[workspace.package]
repository = "https://github.com/Lut99/ast-toolkit2-rs"
license = "Apache-2.0"
