[package]
name = "ast-toolkit2-decl-macros"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository.workspace = true
license.workspace = true
description = "Defines declarative macros for the ast-toolkit2 crate s.t. we can control where they are exported."


[dependencies]


[features]
default = []

# Functionality
print = []
punct = []
