[package]
name = "ast-toolkit2-macros"
version = "0.1.0"
edition = "2024"
authors = ["Lut99"]
repository.workspace = true
license.workspace = true
description = "Defines procedural macros for the ast-toolkit2 crate."


[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.0", default-features = false, features = ["proc-macro"], optional = true }
syn = { version = "2.0.0", default-features = false, features = ["parsing"], optional = true }
quote = { version = "1.0.0", default-features = false, optional = true }


[features]
default = []

# Functionality
loc = ["dep:proc-macro2", "dep:syn", "dep:quote", "syn/derive", "syn/printing"]
tree = ["dep:proc-macro2", "dep:syn", "dep:quote"]
